deployment/istio/base/istio.gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - int.anhdle14.me
        - "*.int.anhdle14.me"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - int.anhdle14.me
        - "*.int.anhdle14.me"
      tls:
        mode: SIMPLE
        credentialName: wildcard-anhdle14-me-secret
